asynchronous search operations in reader (#363)
* Add metric labels to historical data (#326)

Signed-off-by: David Zane <davizane@amazon.com>
Signed-off-by: Chenyang Ji <cyji@amazon.com>

* asynchronous search operations in reader (#344)

* Use async operations in reader

Signed-off-by: Chenyang Ji <cyji@amazon.com>

* add unit tests

Signed-off-by: Chenyang Ji <cyji@amazon.com>

* refactor the code with common util functions and complete unit tests

Signed-off-by: Chenyang Ji <cyji@amazon.com>

* refactor the logic to build index name from range

Signed-off-by: Chenyang Ji <cyji@amazon.com>

* use constants over string literals

Signed-off-by: Chenyang Ji <cyji@amazon.com>

* handle context in a better way and fix a bug result in duplicate records

Signed-off-by: Chenyang Ji <cyji@amazon.com>

---------

Signed-off-by: Chenyang Ji <cyji@amazon.com>

---------

Signed-off-by: David Zane <davizane@amazon.com>
Signed-off-by: Chenyang Ji <cyji@amazon.com>
Co-authored-by: David Zane <38449481+dzane17@users.noreply.github.com>